--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "express",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --experimental-json-modules --exec babel-node index.js"
   },
   "author": "Ryoichi Homma",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/node": "^7.25.0",
+    "@babel/preset-env": "^7.25.4"
   }
 }
